# purescript-inspection

./: .stylish-haskell.yaml  .travis.yml  README.md  inspection.yaml  purescript-inspection.cabal  stack.yaml
app/: DevelMain.hs  Main.hs
config/: development.env
frontend/: bower.json  index.html  package.json  style.css
frontend/src/: Main.purs  Package.purs
purescript-inspection-worker/: index.js  package.json
src/: MyLittlePrelude.hs
src/Inspection/: API.hs  AuthToken.hs  BuildConfig.hs  BuildLogStorage.hs  BuildMatrix.hs  BuildResult.hs  Config.hs  Data.hs  Database.hs  Event.hs  EventLog.hs  Flags.hs  GithubM.hs  PackageName.hs  ReleaseTag.hs  Target.hs  Task.hs  TaskQueue.hs
src/Inspection/API/: BuildMatrix.hs  Sync.hs  Tasks.hs  Types.hs
src/Inspection/Data/: AuthToken.hs  AuthToken.hs~  BuildConfig.hs  BuildResult.hs  Event.hs~  Package.hs  PackageName.hs  ReleaseTag.hs  Target.hs  Task.hs  Task.hs~  TaskQueue.hs  TaskQueue.hs~
src/Purescript/Inspection/: API.hs  AuthToken.hs  BuildConfig.hs  BuildMatrix.hs  BuildResult.hs  Config.hs  Database.hs  PackageName.hs  ReleaseTag.hs  Target.hs  Task.hs  TaskQueue.hs
src/Purescript/Inspection/API/: BuildMatrix.hs  Sync.hs  Tasks.hs  Types.hs
src/Refined/: Extended.hs
test/: Spec.hs
worker/: Bower.hs  Client.hs  Compiler.hs  Main.hs
