name:                purescript-inspection
version:             0.1.0.0
description:         Please see README.md
homepage:            http://github.com/zudov/purescript-inspection#readme
license:             BSD3
license-file:        LICENSE
author:              Konstantin Zudov
maintainer:          co@zudov.me
copyright:           2010 Konstantin Zudov
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Inspection.API
                       Inspection.API.Types
                       Inspection.API.BuildMatrix
                       Inspection.API.Tasks
                       Inspection.BuildConfig
                       Inspection.BuildMatrix
                       Inspection.BuildResult
                       Inspection.Config
                       Inspection.Database
                       Inspection.PackageName
                       Inspection.ReleaseTag
                       Inspection.Target
                       Inspection.Task
                       Inspection.TaskQueue
                       Inspection.AuthToken
                       Inspection.Flags
                       Inspection.EventLog
                       Inspection.Event
                       Inspection.GithubM
  build-depends:       acid-state
                     , aeson
                     , aeson-extra
                     , async
                     , base >= 4.7 && < 5
                     , bytestring
                     , containers
                     , either
                     , github
                     , hashable >= 1.2.4.0
                     , haxl
                     , http-client
                     , http-client-tls
                     , lens
                     , lens-aeson
                     , mtl
                     , network-uri
                     , safe
                     , safecopy
                     , servant
                     , servant-server
                     , text
                     , time
                     , transformers
                     , vector
                     , wai
                     , warp
                     , yaml
                     , operational
                     
  default-language:    Haskell2010
  default-extensions:  DeriveGeneric
                       DeriveDataTypeable
                       PartialTypeSignatures
  ghc-options:         -Wall

executable purescript-inspection-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , purescript-inspection
                     , servant-server
                     , acid-state
                     , wai
                     , wai-extra
                     , wai-cors
                     , warp
                     , http-client
                     , http-client-tls
                     , foreign-store
  default-language:    Haskell2010

executable purescript-inspection-worker
  hs-source-dirs:      worker
  main-is:             Main.hs
  other-modules:       Bower
                       Client
                       Compiler
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , purescript-inspection
                     , servant
                     , servant-client
                     , process
                     , filepath
                     , directory
                     , either
                     , text
                     , containers
                     , temporary

test-suite purescript-inspection-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , purescript-inspection
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/zudov/purescript-inspection
