name:                purescript-inspection
version:             0.1.0.0
description:         Please see README.md
homepage:            http://github.com/zudov/purescript-inspection#readme
license:             BSD3
license-file:        LICENSE
author:              Konstantin Zudov
maintainer:          co@zudov.me
copyright:           2010 Konstantin Zudov
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     MyLittlePrelude
                       Refined.Extended
                       Inspection.API
                       Inspection.API.Types
                       Inspection.API.BuildMatrix
                       Inspection.API.Tasks
                       Inspection.Data
                       Inspection.Data.BuildConfig
                       Inspection.Data.BuildResult
                       Inspection.BuildMatrix
                       Inspection.Config
                       Inspection.Database
                       Inspection.BuildLogStorage
                       Inspection.Data.Package
                       Inspection.Data.PackageName
                       Inspection.Data.ReleaseTag
                       Inspection.Data.Target
                       Inspection.Data.Task
                       Inspection.Data.TaskQueue
                       Inspection.Data.AuthToken
                       Inspection.Flags
                       Inspection.EventLog
                       Inspection.Event
                       Inspection.GithubM
  build-depends:       acid-state
                     , aeson
                     , aeson-extra
                     , async
                     , aws
                     , base >= 4.7 && < 5
                     , base64-bytestring-type
                     , bytestring
                     , containers
                     , either
                     , errors >= 2.1.2
                     , exceptions >= 0.8.2.1
                     , github
                     , hashable >= 1.2.4.0
                     , haxl
                     , http-api-data
                     , http-client
                     , http-client-tls
                     , http-conduit
                     , http-types >= 0.9
                     , ixset-typed
                     , lens
                     , lens-aeson
                     , lucid
                     , mtl
                     , network-uri
                     , operational
                     , refined
                     , resourcet
                     , safe
                     , safecopy
                     , servant >= 0.5
                     , servant-lucid
                     , servant-server >= 0.5
                     , stm
                     , text
                     , time
                     , transformers
                     , unordered-containers >= 0.2.5.1
                     , vector
                     , wai
                     , warp
                     , yaml
                     
  default-language:    Haskell2010
  default-extensions:  DeriveGeneric
                       DeriveDataTypeable
                       PartialTypeSignatures
  ghc-options:         -Wall

executable purescript-inspection-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       acid-state
                     , base
                     , errors >= 2.1.2
                     , exceptions >= 0.8.2.1
                     , foreign-store
                     , http-client
                     , http-client-tls
                     , purescript-inspection
                     , servant-server >= 0.5
                     , wai
                     , wai-cors
                     , wai-extra
                     , warp
  default-language:    Haskell2010

executable purescript-inspection-worker
  hs-source-dirs:      worker
  main-is:             Main.hs
  other-modules:       Bower
                       Client
                       Compiler
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , purescript-inspection
                     , servant >= 0.5
                     , servant-client >= 0.5
                     , process
                     , filepath
                     , directory
                     , either
                     , text
                     , containers
                     , temporary
                     , vector
                     , http-api-data
                     , http-client
                     , mtl
                     , http-client-tls

test-suite purescript-inspection-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , purescript-inspection
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/zudov/purescript-inspection
